# differential-robot-digital-twin

./: README.md  hardware_bridge.py
bringup/: package.xml  setup.py
bringup/bringup/: hardware_bridge.py  odom.py  tf_odom.py
bringup/launch/: bringup.launch.py
diff_robot/: CMakeLists.txt  diff_robot.urdf  package.xml
diff_robot/launch/: gazebo.launch.py  rviz2.launch.py
diff_robot/meshes/: base_footprint.STL  caster_wheel.STL  esp32_cam_link.STL  left_wheel.STL  right_wheel.STL
diff_robot/rviz/: diff_robot.rviz
diff_robot/urdf/: diff_robot.csv  diff_robot.urdf
diff_robot/worlds/: small_1.world
src/diff_robot/: package.xml
src/diff_robot/meshes/: base_footprint.STL  caster_wheel.STL  right_wheel.STL
src/diff_robot/urdf/: diff_robot.urdf
src/teleop_diffrobot/: CMakeLists.txt
src/teleop_diffrobot/src/: teleop_diffrobot.cpp
teleop_diffrobot/: package.xml
teleop_py/: package.xml  setup.cfg  setup.py
teleop_py/teleop_py/: teleop_py.py
